Minor changes in look, adding meta data

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="React-Autocomplete"
+      content="This website contains only a search bar, which when used with '@', provides category and later with a space, you can search, every search that u make gets stored in your local"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
